# commenter

./: .dockerignore  .gitignore  README.md
.deploy/infrastructure/: kafka.yml
commenter-api/: Cargo.toml  Dockerfile
commenter-api/src/: main.rs
commenter-database/: Cargo.toml  Dockerfile  build.rs
commenter-database/migrations/2023-11-04-225408_create_comments_table/: up.sql
commenter-database/src/: comments.rs  lib.rs  schema.rs
commenter-edge/: .env  Cargo.toml  Dockerfile  build.rs
commenter-edge/src/: commenting.rs  comments.rs  context.rs  main.rs  manager.rs  stomp.rs
commenter-hotstorage/: .env  Cargo.toml  Dockerfile
commenter-hotstorage/src/: main.rs
commenter-stomp/: Cargo.toml
commenter-stomp/benches/: stomp_serializer_benchmarks.rs
commenter-stomp/src/: lib.rs  stomp.rs
deploy/: commenter.yml  infrastructure.yml
protos/: comment.proto
