[package]
name = "commenter-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.1.3", features = ["postgres"]}

[build-dependencies]
prost-build = { version = "0.12" }