[package]
name = "commenter-edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
prost = "0.12"
futures-util = "0.3.28"
anyhow = "1.0.75"
serde_json = "1.0.75"
serde = { version = "1.0", features = ["derive"]}

[build-dependencies]
prost-build = { version = "0.12" }
