[package]
name = "commenter-edge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
prost = "0.12"
futures-util = "0.3.28"
anyhow = "1.0.75"
serde_json = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
rdkafka = { version = "0.34", features = ["cmake-build"] }
reqwest = { version = "0.11.12", features = ["json"] }
num = "0.4"
num-derive = "0.4.1"
num-traits = "0.2"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
prost-build = { version = "0.12" }
