[package]
name = "commenter-hotstorage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
rdkafka =  { version = "0.34", features = ["cmake-build"] }
diesel = { version = "2.1.3", features = ["postgres"]}
commenter-database = { path = "../commenter-database"}
dotenv = "0.15.0"
thiserror = "1"
