[package]
name = "commenter-stomp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
anyhow = "1.0.75"

[dev-dependencies]
spectral = "0.6.0"
criterion  = "0.5.1"

[[bench]]
name = "stomp_serializer_benchmarks"
harness = false